mule-user-guide/v/3.5/servlet-connector.adoc
= Servlet Connector

Allows Mule applications to listen for messages or events received using a Servlet request.

At a minimum, specify the path to the Servlet through which the event or message is received. The Path property is set from the General tab.

== Installation

You can install a connector in Anypoint Studio using the instructions in http://www.mulesoft.org/documentation/display/current/Anypoint+Exchange#AnypointExchange-InstallingaConnectorfromAnypointExchange[Installing a Connector from Anypoint Exchange] .  

=== General Tab

image:/docs/download/attachments/122752090/studio-servlet-gen.png?version=2&modificationDate=1422933003729[image]

[width="100%",cols="50%,50%",options="header",]
|===
|Field |Description
|*Display Name* |Defaults to the generic endpoint name, which in this case is Servlet. Change the display name, which must be alpha-numeric, to reflect the endpoint's specific role, such as `Interactive Survey Connection`.
|*Path* |Specify the channel over which your Servlet endpoint communicates with the client web page. For example, `/services/echo`.
|*Connector Configuration* |Use the dropdown list to select a previously configured connector configuration for this endpoint. If you have not created a connector configuration for this type of endpoint, you can do so from this window by clicking *Add* . Click *Edit* to modify a previously created global element.
|===

=== Advanced Tab

image:/docs/download/attachments/122752090/studio-servlet-adv.png?version=2&modificationDate=1422933040719[image]

[width="100%",cols="50%,50%",options="header",]
|===
|Field |Description
|*Address* |Enter the address for this endpoint, such as, `http://localhost:8000/file` .
|*Response Timeout* |Specify how long the endpoint must wait for a response (in ms). The default is *10000* ms.
|*Encoding* |Choose from a drop-down list the character set used for message data. (Such as, UTF-8).
|*Disable Transport Transformer* |Check this box if you do _not_ want to use the endpoint’s default response transport.
|*MIME Type* |Select from the dropdown list one of the formats this endpoint supports.
|*Connector Endpoint* |Use the drop-down list to select a previously configured global endpoint template, if any exist. If you have not created a global element for this type of endpoint, you do so by clicking *Add* and completing the fields on the pane that appears. Click *Edit* to modify a previously created global element.
|*Enable default events tracking* |Enable default  link:/docs/display/current/Business+Events[business event]  tracking for this endpoint.
|===

=== Transformers Tab

image:/docs/download/attachments/122752090/studio-servlet-trans.png?version=2&modificationDate=1422933113832[image]

[width="100%",cols="50%,50%",options="header",]
|===
|Field |Description
|*Request Transformer References* |Enter a list of synchronous transformers to apply to the request before sending it to the transport.
|*Response Transformer References* |Enter a list of synchronous transformers to apply to the response before it returns from the transport.
|===

== See Also

See the link:/docs/display/current/Servlet+Transport+Reference[Servlet Transport Reference] for details on setting the properties for a Servlet endpoint using an XML editor.
